docs: change underscore to hyphen in file names

--- a/docs/2.getting-started.md
+++ b/docs/2.getting-started.md
@@ -130,12 +130,12 @@ facilities to create custom blocks and types.
 
 The lines in the blocks section instantiate each block of the flow graph. Each
 block's constructor is documented in the [LuaRadio Reference
-Manual](0.reference_manual.md). Note that sample rate parameters are only
+Manual](0.reference-manual.md). Note that sample rate parameters are only
 required for the source blocks — all other blocks inherit their sample rate
 through the connections in the flow graph.
 
 The last line of the blocks section instantiates a special kind of block,
-called the [`CompositeBlock`](0.reference_manual.md#compositeblock). A
+called the [`CompositeBlock`](0.reference-manual.md#compositeblock). A
 composite block is a composition of blocks, created for one of two purposes:
 either for a top-level block, a composition of blocks forming a complete flow
 graph that can be run, or for a hierarchical block, a composition of blocks
@@ -159,7 +159,7 @@ syntax is convenient for connecting chains of blocks that only have one input
 and output, which is most blocks.
 
 The input and output ports for each block, and their supported data types, are
-documented in the [LuaRadio Reference Manual](0.reference_manual.md).
+documented in the [LuaRadio Reference Manual](0.reference-manual.md).
 
 The last line of the example runs the flow graph. This line will block until
 the flow graph terminates, either naturally by an exiting source, or forcibly
@@ -170,11 +170,11 @@ user's `SIGINT` signal.
 ## Types and Blocks
 
 Building flow graphs with LuaRadio is a matter of choosing the right blocks and
-connecting them.  The [LuaRadio Reference Manual](0.reference_manual.md)
+connecting them.  The [LuaRadio Reference Manual](0.reference-manual.md)
 documents all packaged blocks, including a description of their operation,
 their arguments, and their input/output port names and data types. Creating
 custom blocks is easy, too, and covered in the next guide, [Creating
-Blocks](3.creating_blocks.md).
+Blocks](3.creating-blocks.md).
 
 LuaRadio blocks may support multiple type signatures for their input and output
 ports, but only blocks with compatible output and input types can be connected.
@@ -185,11 +185,11 @@ types.
 
 LuaRadio comes with four basic data types:
 
-* [`ComplexFloat32`](0.reference_manual.md#complexfloat32), compatible with the
+* [`ComplexFloat32`](0.reference-manual.md#complexfloat32), compatible with the
   `float complex` C type
-* [`Float32`](0.reference_manual.md#float32), the `float` C type
-* [`Byte`](0.reference_manual.md#byte), the `uint8_t` C type
-* [`Bit`](0.reference_manual.md#bit), a single-bit value stored in the
+* [`Float32`](0.reference-manual.md#float32), the `float` C type
+* [`Byte`](0.reference-manual.md#byte), the `uint8_t` C type
+* [`Bit`](0.reference-manual.md#bit), a single-bit value stored in the
   `uint8_t` C type
 
 Under the hood, the framework moves vectors of contiguous samples between
@@ -200,7 +200,7 @@ them.
 
 In addition, users may create custom data types based on C structures or Lua
 objects that are serializable between processing blocks. See the [Custom
-Types](3.creating_blocks.md#custom-types) section in the next guide.
+Types](3.creating-blocks.md#custom-types) section in the next guide.
 
 ## Caveats
 
@@ -210,7 +210,7 @@ The LuaRadio architecture has a few important caveats.
 
 Feedback loops cannot be implemented by blocks connected in a cycle.  Instead,
 operations that require feedback loops must be implemented entirely within a
-block (for example, the [PLLBlock](0.reference_manual.md#pllblock)).
+block (for example, the [PLLBlock](0.reference-manual.md#pllblock)).
 
 ##### Blocks cannot be manipulated after a flow graph is running.
 
@@ -222,5 +222,5 @@ out-of-band messaging to the block.
 
 ## Next Steps...
 
-See the next guide, [Creating Blocks](3.creating_blocks.md), for details on
+See the next guide, [Creating Blocks](3.creating-blocks.md), for details on
 creating your own LuaRadio blocks.
