--- a/docs/3.creating-blocks.md
+++ b/docs/3.creating-blocks.md
@@ -50,7 +50,7 @@ LuaRadio runs its internal blocks as if they were directly connected into the
 top-level flow graph.
 
 There are two ways to create a hierarchical block. The first is to use
-[`CompositeBlock`](0.reference_manual.md#compositeblock) directly, and the
+[`CompositeBlock`](0.reference-manual.md#compositeblock) directly, and the
 second is to derive a block class from `CompositeBlock`.
 
 In the example below, we'll create a hierarchical block both ways for a
@@ -98,7 +98,7 @@ The blocks section instantiates the internal blocks of the demodulator, as well
 as a `CompositeBlock` that will hold their composition. The connections in the
 connections section connects the internal blocks. This procedure is identical
 to building a top-level flow graph, as seen in the [Getting
-Started](2.getting_started.md#example) guide.
+Started](2.getting-started.md#example) guide.
 
 The type signature section adds a type signature that defines the names and
 data types of the boundary input/output ports of the hierarchical block. This
@@ -106,11 +106,11 @@ step creates the external interface to the hierarchical block, so we may
 connect other blocks to it.
 
 The first argument of
-[`add_type_signature()`](0.reference_manual.md#blockadd_type_signatureinputs-outputs-process_funcnil-initialize_funcnil)
-is an array of [`radio.block.Input()`](0.reference_manual.md#input)
+[`add_type_signature()`](0.reference-manual.md#blockadd_type_signatureinputs-outputs-process_funcnil-initialize_funcnil)
+is an array of [`radio.block.Input()`](0.reference-manual.md#input)
 descriptors, which specifies the name and data type of each input port. The
 second argument is the analogous for output ports, with
-[`radio.block.Output()`](0.reference_manual.md#output) descriptors.  In this
+[`radio.block.Output()`](0.reference-manual.md#output) descriptors.  In this
 case, there is one input named `in` of type `ComplexFloat32`, and one output
 named `out` of type `Float32`. We may call `add_type_signature()` as many times
 as we need to register multiple type signatures of different data types, but
@@ -195,9 +195,9 @@ Before we dive in to implementing blocks, we'll first need to take a look at
 LuaRadio's basic types and how to create and manipulate vectors of them.
 
 LuaRadio has four basic types:
-[`ComplexFloat32`](0.reference_manual.md#complexfloat32),
-[`Float32`](0.reference_manual.md#float32), [`Bit`](0.reference_manual.md#bit),
-[`Byte`](0.reference_manual.md#byte). Each instance of these types represents
+[`ComplexFloat32`](0.reference-manual.md#complexfloat32),
+[`Float32`](0.reference-manual.md#float32), [`Bit`](0.reference-manual.md#bit),
+[`Byte`](0.reference-manual.md#byte). Each instance of these types represents
 one element, so a `radio.types.ComplexFloat32(3, 2)` is a complex number with
 real value of 3 and imaginary value of 2, and `radio.types.Float32(123.0)` is a
 real number with a value of 123.0. These types are LuaJIT ctypes, distinct from
@@ -250,7 +250,7 @@ print(a:abs()) --> 3.6055512428284
 print(a:arg()) --> 0.58800262212753
 ```
 
-See the [LuaRadio Reference Manual](0.reference_manual.md#basic-types) for all
+See the [LuaRadio Reference Manual](0.reference-manual.md#basic-types) for all
 operations defined on the basic types.
 
 ## Vectors
@@ -355,7 +355,7 @@ fallback implementation for non-real-time applications.
 ### Methods
 
 Blocks are classes manufactured by the
-[`radio.block.factory(name)`](0.reference_manual.md#radioblockfactoryname-parent_classnil)
+[`radio.block.factory(name)`](0.reference-manual.md#radioblockfactoryname-parent_classnil)
 factory function. Blocks implement all of their functionality with four
 methods:
 
@@ -440,11 +440,11 @@ self:add_type_signature(<inputs>, <outputs>)
 ```
 
 The first argument of
-[`add_type_signature()`](0.reference_manual.md#blockadd_type_signatureinputs-outputs-process_funcnil-initialize_funcnil)
-is an array of [`radio.block.Input()`](0.reference_manual.md#input)
+[`add_type_signature()`](0.reference-manual.md#blockadd_type_signatureinputs-outputs-process_funcnil-initialize_funcnil)
+is an array of [`radio.block.Input()`](0.reference-manual.md#input)
 descriptors, which specify the name and data type of each input port. The
 second argument is analogous, with
-[`radio.block.Output()`](0.reference_manual.md#output) descriptors, for output
+[`radio.block.Output()`](0.reference-manual.md#output) descriptors, for output
 ports.  We may call `add_type_signature()` as many times as needed to register
 multiple type signatures of different data types, but they must all share the
 same input/output port count and names.
@@ -503,9 +503,9 @@ it easier to separate type-dependent initialization and processing code in a
 block.
 
 A block can look up its differentiated types in `initialize()` or `process()`
-with the [`get_input_type()`](0.reference_manual.md#blockget_input_typeindex1)
-and [`get_output_type()`](0.reference_manual.md#blockget_output_typeindex1)
-methods.  See the [LuaRadio Reference Manual](0.reference_manual.md#block-1)
+with the [`get_input_type()`](0.reference-manual.md#blockget_input_typeindex1)
+and [`get_output_type()`](0.reference-manual.md#blockget_output_typeindex1)
+methods.  See the [LuaRadio Reference Manual](0.reference-manual.md#block-1)
 for more information.
 
 ### Example
@@ -601,7 +601,7 @@ print(c) --> [Float32<value=2>, Float32<value=12>, Float32<value=30>]
 ```
 
 A block is differentiated with
-[`differentiate()`](0.reference_manual.md#blockdifferentiateinput_data_types)
+[`differentiate()`](0.reference-manual.md#blockdifferentiateinput_data_types)
 by providing an array of its input data types. In this case, an array of two
 `Float32` data types was provided, so that the block would be differentiated
 into the type signature with two `Float32` inputs and one `Float32` output.
@@ -641,7 +641,7 @@ details.
 
 ### Benchmarking
 
-LuaRadio includes a [`BenchmarkSink`](0.reference_manual.md#benchmarksink) for
+LuaRadio includes a [`BenchmarkSink`](0.reference-manual.md#benchmarksink) for
 benchmarking blocks. This sink reports the actual computational rate samples
 are consumed in samples per second. This rate can be used as a rough
 performance benchmark of a block.
@@ -667,7 +667,7 @@ top:run()
 ```
 
 In this flow graph, the multiply block inputs are fed by a
-[`NullSource`](0.reference_manual.md#nullsource), which sources zero-valued
+[`NullSource`](0.reference-manual.md#nullsource), which sources zero-valued
 samples, and the multiply block output is connected to a `BenchmarkSink`, which
 counts received samples over time. The `BenchmarkSink` periodically reports the
 average rate of samples consumed.
@@ -945,7 +945,7 @@ The block's `initialize()` method computes the relevant parameters for
 deviation. The samples per bit parameter is computed by dividing the output
 sample rate — specified in the constructor — by the input bit rate. The input
 bit rate is looked up by using the Block superclass's
-[`get_rate()`](0.reference_manual.md#blockget_rate) implementation, which
+[`get_rate()`](0.reference-manual.md#blockget_rate) implementation, which
 returns the rate of the upstream block, since this block redefines `get_rate()`
 for the samples it produces. It creates the `fskmod` object with these
 parameters, and a `ComplexFloat32` persistent output vector in `self.out`.
@@ -968,9 +968,9 @@ samples in the output vector, and it returns the output vector.
 
 We can test our BFSK modulator in a simple flow graph, by sourcing it with
 random bits from
-[`UniformRandomSource`](0.reference_manual.md#uniformrandomsource), and sinking
+[`UniformRandomSource`](0.reference-manual.md#uniformrandomsource), and sinking
 the modulated signal to a
-[`GnuplotSpectrumSink`](0.reference_manual.md#gnuplotspectrumsink) spectrum
+[`GnuplotSpectrumSink`](0.reference-manual.md#gnuplotspectrumsink) spectrum
 plotting sink:
 
 <p align="center">
@@ -1008,12 +1008,12 @@ bit stream may be framed into a data frame, a data frame decoded into a packet,
 and so on.
 
 LuaRadio offers two solutions for custom types. The first, called a [`CStruct`
-type](0.reference_manual.md#cstructtype), is a type backed by a constant-size C
+type](0.reference-manual.md#cstructtype), is a type backed by a constant-size C
 structure. This is appropriate for fixed-size data types and is efficiently
 serialized between blocks. All four basic types are themselves, in fact,
 `CStruct` types.
 
-The second, called an [`Object` type](0.reference_manual.md#objecttype), is a
+The second, called an [`Object` type](0.reference-manual.md#objecttype), is a
 type backed by any Lua object.  Instances of this type can be arbitrarily-sized
 and contain any Lua primitive data types (tables, numbers, strings, booleans,
 etc.). `Object` types are not as efficient as `CStruct` types, as they are
@@ -1025,14 +1025,14 @@ very effective.
 
 `CStruct` types are manufactured with the
 [`radio.types.CStructType.factory(ctype,
-methods)`](0.reference_manual.md#cstructtypefactoryctype-methods) factory
+methods)`](0.reference-manual.md#cstructtypefactoryctype-methods) factory
 function. The first parameter is the name of the C structure type, and the
 second parameter is an optional table of methods and metamethods to be
 associated with the type. The type will automatically inherit `.vector()` and
 `.vector_from_array()` static methods, so that vectors of the type can be
 created by blocks, as well as internal serialization methods so the framework
 can serialize the type between blocks. See the [LuaRadio Reference
-Manual](0.reference_manual.md#cstructtype) for more inherited methods of
+Manual](0.reference-manual.md#cstructtype) for more inherited methods of
 `CStruct` types.
 
 In this example, we construct a fictional type `FooFrame` with a 16-bit address
@@ -1119,14 +1119,14 @@ end
 ### `Object` types
 
 `Object` types are manufactured with the
-[`radio.types.ObjectType.factory()`](0.reference_manual.md#objecttypefactorymethods)
+[`radio.types.ObjectType.factory()`](0.reference-manual.md#objecttypefactorymethods)
 factory function. The type will automatically inherit `.vector()` and
 `.vector_from_array()` static methods, so that vectors of the type can be
 created by blocks, as well as internal serialization methods so the framework
 can serialize the type between blocks.  In addition, the type will inherit the
 `.to_json()` method to form a JSON representation, enabling the type to be used
-with the [`JSONSink`](0.reference_manual.md#jsonsink). See the [LuaRadio
-Reference Manual](0.reference_manual.md#objecttype) for more inherited methods
+with the [`JSONSink`](0.reference-manual.md#jsonsink). See the [LuaRadio
+Reference Manual](0.reference-manual.md#objecttype) for more inherited methods
 of `Object` types.
 
 After an `Object` data type is created, its `.new()` constructor must be
@@ -1213,11 +1213,11 @@ end
 
 ## Manipulating Bits
 
-Digital blocks that manipulate [`Bit`](0.reference_manual.md#bit) typed vectors
+Digital blocks that manipulate [`Bit`](0.reference-manual.md#bit) typed vectors
 often need to convert bits into numbers and perform bitwise operations on them.
 
 The `Bit` data type provides the static method
-[`.tonumber()`](0.reference_manual.md#bittonumbervec-offset0-length0-ordermsb)
+[`.tonumber()`](0.reference-manual.md#bittonumbervec-offset0-length0-ordermsb)
 that operates on `Bit` vectors to extract numbers from bits. This method takes
 a `Bit` vector as its first argument, and optional arguments offset, length,
 and bit order to specify most kinds of bit extractions.
