--- a/docs/4.embedding-luaradio.md
+++ b/docs/4.embedding-luaradio.md
@@ -81,10 +81,10 @@ const luaradio_version_t *luaradio_version_info(void);
 ```
 
 The C API also defines the C types corresponding to the four basic data types
-[`radio.types.ComplexFloat32`](0.reference_manual.md#complexfloat32),
-[`radio.types.Float32`](0.reference_manual.md#float32),
-[`radio.types.Bit`](0.reference_manual.md#bit), and
-[`radio.types.Byte`](0.reference_manual.md#byte), under `complex_float32_t`,
+[`radio.types.ComplexFloat32`](0.reference-manual.md#complexfloat32),
+[`radio.types.Float32`](0.reference-manual.md#float32),
+[`radio.types.Bit`](0.reference-manual.md#bit), and
+[`radio.types.Byte`](0.reference-manual.md#byte), under `complex_float32_t`,
 `float32_t`, `bit_t`, `byte_t` types, respectively.
 
 In basic usage of the API, applications create a LuaRadio context with
@@ -94,7 +94,7 @@ In basic usage of the API, applications create a LuaRadio context with
 After this, `luaradio_status()`, `luaradio_wait()`, and `luaradio_stop()` can
 be used to get the running status of the flow graph, wait on the flow graph to
 finish, or stop the flow graph, respectively.  These calls correspond to the
-[`CompositeBlock`](0.reference_manual.md#compositeblock) methods of the same
+[`CompositeBlock`](0.reference-manual.md#compositeblock) methods of the same
 name.
 
 When the flow graph is terminated and work with the context is complete, the
@@ -117,8 +117,8 @@ context.
 An application may source or sink samples in a LuaRadio flow graph through a
 pair of connected file descriptors, e.g. from `pipe()` or `socketpair()`.  The
 file descriptor can be handed off to LuaRadio as a parameter to a
-[`RawFileSource`](0.reference_manual.md#rawfilesource), if the application is
-sourcing samples, or a [`RawFileSink`](0.reference_manual.md#rawfilesink), if
+[`RawFileSource`](0.reference-manual.md#rawfilesource), if the application is
+sourcing samples, or a [`RawFileSink`](0.reference-manual.md#rawfilesink), if
 the application is sinking samples (or both). The application can then use
 standard file descriptor I/O calls `read()` or `write()` on its file descriptor
 to serialize samples to or from LuaRadio. The application must know the C type
@@ -158,9 +158,9 @@ generation and mapping types. LuaRadio follows the Lua embedding approach.
 
 The FM Radio example is a command-line broadcast FM radio receiver, built with
 a small flow graph containing an
-[`RtlSdrSource`](0.reference_manual.md#rtlsdrsource), a
-[`WBFMMonoDemodulator`](0.reference_manual.md#wbfmmonodemodulator), and a
-[`PulseAudioSink`](0.reference_manual.md#pulseaudiosink). It accepts the
+[`RtlSdrSource`](0.reference-manual.md#rtlsdrsource), a
+[`WBFMMonoDemodulator`](0.reference-manual.md#wbfmmonodemodulator), and a
+[`PulseAudioSink`](0.reference-manual.md#pulseaudiosink). It accepts the
 station frequency from the command-line and substitutes it into the flow graph
 script.
 
@@ -263,9 +263,9 @@ information. RDS-enabled FM radio stations transmit it once every minute.
 
 The RDS timesync example is a command-line tool that sets the system time and
 date to an RDS-enabled FM radio station.  It is built with a small flow graph
-containing an [`RtlSdrSource`](0.reference_manual.md#rtlsdrsource), an
-[`RDSReceiver`](0.reference_manual.md#rdsreceiver), and a
-[`RawFileSink`](0.reference_manual.md#rawfilesink).  The frames decoded by the
+containing an [`RtlSdrSource`](0.reference-manual.md#rtlsdrsource), an
+[`RDSReceiver`](0.reference-manual.md#rdsreceiver), and a
+[`RawFileSink`](0.reference-manual.md#rawfilesink).  The frames decoded by the
 RDS receiver are serialized to the C application through the raw file sink. The
 C application scans for the time and date message type, and once it finds one,
 decodes it and sets the system time and date to it.
