--- a/docs/6.comparison-gnuradio.md
+++ b/docs/6.comparison-gnuradio.md
@@ -70,14 +70,14 @@ LuaRadio blocks are written in pure Lua, have substantially less boilerplate,
 and require no compilation. LuaRadio blocks do not require bindings for the
 convenience of scripting. Blocks can support multiple data types natively, e.g
 [`AddBlock`](../radio/blocks/signal/add.lua), with LuaRadio's type signature
-system.  See the [Creating Blocks](3.creating_blocks.md) guide for more details
+system.  See the [Creating Blocks](3.creating-blocks.md) guide for more details
 on LuaRadio blocks.
 
 LuaRadio allows defining custom data types based on fixed-size C structures or
 variable-sized Lua objects for serialization between blocks. This makes it easy
 and natural to create blocks that produce structured data (e.g. decoded
 packets). See the custom types section of [Creating
-Blocks](3.creating_blocks.md#custom-types) for examples.
+Blocks](3.creating-blocks.md#custom-types) for examples.
 
 ## Features
 
@@ -87,7 +87,7 @@ GNU Radio's I/O signature system is limited to matching sizes of types (e.g.
 `sizeof(gr_complex)`) in block connections, whereas LuaRadio's type signature
 system is much more flexible. Types in block connections are matched explicitly
 in LuaRadio, and input types can also be specified by a function predicate.
-For example, the [`JSONSink`](0.reference_manual.md#jsonsink) block can accept
+For example, the [`JSONSink`](0.reference-manual.md#jsonsink) block can accept
 any data type that implements `to_json()`.
 
 GNU Radio blocks can only support one type signature, which pushes the problem
@@ -98,8 +98,8 @@ suffixes like `_cc` and `_ff`, e.g. `multiply_cc`, `multiply_ff`,
 Radio Sphinx documentation](http://gnuradio.org/doc/sphinx/) for more examples.
 
 On the other hand, LuaRadio blocks can support multiple type signatures. For
-example, the [`MultiplyBlock`](0.reference_manual.md#multiplyblock) and
-[`FIRFilterBlock`](0.reference_manual.md#firfilterblock) can accept both
+example, the [`MultiplyBlock`](0.reference-manual.md#multiplyblock) and
+[`FIRFilterBlock`](0.reference-manual.md#firfilterblock) can accept both
 complex-valued and real-valued input/output types, and the framework will
 automatically differentiate the correct type signature based on the block's
 connections in a flow graph. This helps with code reuse and consolidation, as
@@ -118,13 +118,13 @@ reduces the chance of user error, as LuaRadio blocks require less
 configuration, and any frequency parameters that are required are in units of
 hertz. It also allows for a suite of convenience blocks that automatically
 perform sample rate dependent initialization, e.g.  the
-[`LowpassFilterBlock`](0.reference_manual.md#lowpassfilterblock), whose
+[`LowpassFilterBlock`](0.reference-manual.md#lowpassfilterblock), whose
 parameters are just number of taps and a cutoff frequency in hertz.
 
 ### Embeddability
 
 LuaRadio's small footprint allows it to be wholly embeddable in applications.
-See the [Embedding LuaRadio](4.embedding_luaradio.md) guide for more details
+See the [Embedding LuaRadio](4.embedding-luaradio.md) guide for more details
 and examples.
 
 ## Performance
