--- a/docs/5.architecture.md
+++ b/docs/5.architecture.md
@@ -50,11 +50,11 @@ call to `process(...)` that output samples are produced.
 Vectors of samples are serialized between output and input ports of blocks over
 anonymous UNIX sockets.
 
-Vectors of [`CStruct` data type](0.reference_manual.md#cstructtype) samples are
+Vectors of [`CStruct` data type](0.reference-manual.md#cstructtype) samples are
 serialized raw, in their native memory representation, with no marshalling or
 unmarshalling.
 
-Vectors of [`Object` data type](0.reference_manual.md#objecttype) samples are
+Vectors of [`Object` data type](0.reference-manual.md#objecttype) samples are
 marshalled and unmarshalled with [MessagePack](http://msgpack.org/) and
 serialized as byte strings, preceded with their length.
 
@@ -125,8 +125,8 @@ would add substantial complexity.
 
 Samples are typed by special data types that implement the necessary interface
 to be serialized and deserialized between blocks. These data types can either
-be [`CStruct` types](0.reference_manual.md#cstructtype), which are backed by a
-C structure, or [`Object` types](0.reference_manual.md#objecttype), which are
+be [`CStruct` types](0.reference-manual.md#cstructtype), which are backed by a
+C structure, or [`Object` types](0.reference-manual.md#objecttype), which are
 backed by a Lua object.
 
 `CStruct` types are serialized as raw contiguous samples between blocks in
@@ -139,9 +139,9 @@ bytes between blocks. These types can be variable size, may nest other Lua
 types, and may have optional members.
 
 LuaRadio has four basic types, all of which are `CStruct` types. These are the
-[`ComplexFloat32`](0.reference_manual.md#complexfloat32),
-[`Float32`](0.reference_manual.md#float32), [`Bit`](0.reference_manual.md#bit),
-and [`Byte`](0.reference_manual.md#byte) types.
+[`ComplexFloat32`](0.reference-manual.md#complexfloat32),
+[`Float32`](0.reference-manual.md#float32), [`Bit`](0.reference-manual.md#bit),
+and [`Byte`](0.reference-manual.md#byte) types.
 
 They are backed by the following C structure types:
 
@@ -174,7 +174,7 @@ instances distinct from other occurrences of the underlying data types (e.g.
 `float32_t` vs `float`).
 
 Users can define their own `CStruct` and `Object` types and bind methods to
-them. See the [Creating Blocks](3.creating_blocks.md#custom-types) guide for
+them. See the [Creating Blocks](3.creating-blocks.md#custom-types) guide for
 more details and examples.
 
 Code reference: [CStruct class](../radio/types/cstruct.lua), [Object
@@ -242,7 +242,7 @@ Code reference: [Vector and ObjectVector classes](../radio/core/vector.lua).
 ### Blocks
 
 Blocks are classes derived from
-[`radio.block.Block`](0.reference_manual.md#block-1) that implement their
+[`radio.block.Block`](0.reference-manual.md#block-1) that implement their
 functionality in the following methods:
 
 * `instantiate(...)` — constructor
@@ -266,7 +266,7 @@ The `cleanup()` method is called by the framework when the flow graph has
 collapsed, for additional clean up of resources.
 
 Source blocks and blocks that modify the sample rate must implement the
-[`get_rate()`](0.reference_manual.md#blockget_rate)  method, which returns the
+[`get_rate()`](0.reference-manual.md#blockget_rate)  method, which returns the
 source's sample rate as a number, in samples per second.
 
 Code reference: [Block class](../radio/core/block.lua).
@@ -289,7 +289,7 @@ The `instantiate(...)` method is called whenever a block is instantiated by
 name.  This method takes the arguments passed to the block on instantiation.
 
 Blocks must register type signatures with the
-[`add_type_signature()`](0.reference_manual.md#blockadd_type_signatureinputs-outputs-process_funcnil-initialize_funcnil)
+[`add_type_signature()`](0.reference-manual.md#blockadd_type_signatureinputs-outputs-process_funcnil-initialize_funcnil)
 method in their `instantiate()` constructor. This method takes an array of
 input port descriptors, followed by an array of output port descriptors. Each
 port descriptor specifies the name and the data type. For example, a `AddBlock`
@@ -311,7 +311,7 @@ implemented the same way as other blocks.
 The `add_type_signature()` method can also be used to specify different process
 and initialize methods to type signatures, that are bound to the block on
 differentiation. See the [Creating
-Blocks](3.creating_blocks.md#type-signatures) guide for examples.
+Blocks](3.creating-blocks.md#type-signatures) guide for examples.
 
 #### Connection
 
@@ -346,7 +346,7 @@ into a compatible type signature. This differentiation starts at the source
 blocks and ends at the sink blocks, and is carried out in a downstream order.
 
 A block is differentiated by its input types, using the
-[`differentiate()`](0.reference_manual.md#blockdifferentiateinput_data_types)
+[`differentiate()`](0.reference-manual.md#blockdifferentiateinput_data_types)
 method. This method takes an array of input data types and differentiates the
 block into a compatible type signature by checking for matching input data
 types in each registered type signature. The method raises an error if a
@@ -364,8 +364,8 @@ the block's `.inputs` and `.outputs` take on the concrete data types specified
 in the selected type signature, and the block's `initialize()` and `process()`
 methods are bound to the ones specified in the type signature. The concrete
 data types are available to the block with the
-[`get_input_type()`](0.reference_manual.md#blockget_input_typeindex1) and
-[`get_output_type()`](0.reference_manual.md#blockget_output_typeindex1)
+[`get_input_type()`](0.reference-manual.md#blockget_input_typeindex1) and
+[`get_output_type()`](0.reference-manual.md#blockget_output_typeindex1)
 methods.
 
 Since a block is differentiated by its input types, it cannot have
@@ -393,13 +393,13 @@ order.
 
 In the `initialize()` method, the block can perform data type dependent
 initialization with the
-[`get_input_type()`](0.reference_manual.md#blockget_input_typeindex1) and
-[`get_output_type()`](0.reference_manual.md#blockget_output_typeindex1)
+[`get_input_type()`](0.reference-manual.md#blockget_input_typeindex1) and
+[`get_output_type()`](0.reference-manual.md#blockget_output_typeindex1)
 methods, which return arrays of the differentiated input and output types,
 respectively.
 
 The block can also perform sample rate dependent initialization with
-[`get_rate()`](0.reference_manual.md#blockget_rate), which recursively calls
+[`get_rate()`](0.reference-manual.md#blockget_rate), which recursively calls
 `get_rate()` on upstream blocks in the flow graph to determine the sample rate.
 Blocks may modify the sample rate for downstream blocks by overloading this
 method, and source blocks are required to implement it to return a concrete
@@ -488,7 +488,7 @@ Code reference: [Block class](../radio/core/block.lua).
 
 ### Composite Blocks
 
-The [`CompositeBlock`](0.reference_manual.md#compositeblock) is a special block
+The [`CompositeBlock`](0.reference-manual.md#compositeblock) is a special block
 used to build and run flow graphs.  It can either be used as a hierarchical
 block, a composition of blocks abstracted into one block with redefined
 inputs/outputs at its boundary, or as a top-level block, a composition of
@@ -498,7 +498,7 @@ blocks forming a complete flow graph that can be run.
 
 A `CompositeBlock` used for a hierarchical block builds an internal flow graph
 by connecting block ports with the
-[`connect()`](0.reference_manual.md#compositeblockconnect) method, just as a
+[`connect()`](0.reference-manual.md#compositeblockconnect) method, just as a
 top-level block would. However, unlike top-level blocks, which have no boundary
 inputs or outputs, hierarchical blocks also specify a type signature with
 `add_type_signature()` for their boundary inputs and outputs.
@@ -519,7 +519,7 @@ Code reference: [CompositeBlock class](../radio/core/composite.lua).
 #### Top-level Blocks
 
 A `CompositeBlock` used for a top-level block builds a flow graph by connecting
-block ports with the [`connect()`](0.reference_manual.md#compositeblockconnect)
+block ports with the [`connect()`](0.reference-manual.md#compositeblockconnect)
 method. The data structure for the flow graph is a table that maps block
 `PipeInput` instances to `PipeOutput` instances. In other words, it is a hash
 table of input port to output port, for each connection between blocks in the
@@ -544,8 +544,8 @@ Code reference: [CompositeBlock class](../radio/core/composite.lua).
 ##### Run Preparation
 
 After the flow graph is connected under a top-level block, it can be run with
-[`start()`](0.reference_manual.md#compositeblockstart) or
-[`run()`](0.reference_manual.md#compositeblockrun).  Running a flow graph
+[`start()`](0.reference-manual.md#compositeblockstart) or
+[`run()`](0.reference-manual.md#compositeblockrun).  Running a flow graph
 requires a few initialization steps before each block can begin to consume,
 process, and produce samples.
 
@@ -605,19 +605,19 @@ Code reference: [CompositeBlock class](../radio/core/composite.lua).
 
 ##### Flow Graph Control
 
-The [`wait()`](0.reference_manual.md#compositeblockwait) method waits for a
+The [`wait()`](0.reference-manual.md#compositeblockwait) method waits for a
 `SIGINT` or `SIGCHLD` signal. If it gets a `SIGINT` signal, which indicates a
 user requested exit, it calls `stop()` to stop the flow graph. If it gets a
 `SIGCHLD` signal, which indicates a block exited, it waits on each block PID
 with `waitpid()` until the flow graph has fully collapsed, and then unblocks
 the `SIGINT` and `SIGCHLD` signals.
 
-The [`stop()`](0.reference_manual.md#compositeblockstop) method kills all
+The [`stop()`](0.reference-manual.md#compositeblockstop) method kills all
 source blocks with `SIGTERM`, waits on each block PID with `waitpid()` until
 the flow graph has fully collapsed, and then unblocks the `SIGINT` and
 `SIGCHLD` signals.
 
-The [`status()`](0.reference_manual.md#compositeblockstatus) method checks if
+The [`status()`](0.reference-manual.md#compositeblockstatus) method checks if
 any block is still running with `kill(pid, 0)`.  If all blocks have exited, it
 waits on each block PID with `waitpid()`, and then unblocks the `SIGINT` and
 `SIGCHLD` signals.
