docs: simplify source instructions in installation guide

--- a/docs/1.installation.md
+++ b/docs/1.installation.md
@@ -1,6 +1,6 @@
 # Installation
 
-Currently, LuaRadio can be installed from the Arch Linux AUR or from source.
+LuaRadio can be installed from the Arch Linux AUR or from source.
 
 Packaging for other distributions and platforms is a work in progress.
 
@@ -11,11 +11,10 @@ LuaRadio is available in the Arch Linux AUR under the package
 
 ## Installing from Source
 
-**1. Install LuaJIT**
+Install LuaJIT. Most platforms have LuaJIT in their official package
+repositories.
 
-Most Linux distributions have LuaJIT in their official package repositories.
-
-**2. Install LuaRadio**
+Build and install LuaRadio:
 
 ```
 git clone git://github.com/vsergeev/luaradio.git
@@ -24,45 +23,14 @@ make
 sudo make install
 ```
 
-**3. Install liquid-dsp and/or libvolk for real-time acceleration**
-
 LuaRadio has no hard dependencies outside of LuaJIT, but for real-time
 applications, the [liquid-dsp](https://github.com/jgaeddert/liquid-dsp) or
-[libvolk](http://libvolk.org), and [fftw](http://www.fftw.org/) libraries are
-strongly encouraged for appreciable performance.
+[VOLK](http://libvolk.org), and [fftw](http://www.fftw.org/) libraries are
+strongly encouraged for appreciable performance. These libraries may be
+available in your distribution's package repositories, or can be built from
+source.
 
-These libraries may be available in your distribution's package repositories.
-Otherwise, the instructions for installation from source are reproduced below.
-
-Build and install [liquid-dsp](https://github.com/jgaeddert/liquid-dsp):
-
-```
-git clone git://github.com/jgaeddert/liquid-dsp.git
-cd liquid-dsp
-./bootstrap.sh
-./configure
-make
-sudo make install
-```
-
-Build and install [libvolk](https://github.com/gnuradio/volk) (optional,
-depends on boost):
-
-```
-git clone git://github.com/gnuradio/volk.git
-cd volk
-mkdir build
-cd build
-cmake ..
-make
-make test
-sudo make install
-```
-
-**4. Check Install**
-
-The `liquid`, `volk`, and `fftw3f` features should be marked true in LuaRadio's
-platform information, if the respective libraries were found by LuaRadio.
+Check the installation by dumping the platform information:
 
 ```
 $ luaradio --platform
@@ -79,3 +47,5 @@ features
 $
 ```
 
+The `liquid`, `volk`, and `fftw3f` features should be marked true, if the
+respective libraries were found by LuaRadio.
