--- a/docs/1.installation.md
+++ b/docs/1.installation.md
@@ -17,7 +17,7 @@ repositories.
 Build and install LuaRadio:
 
 ```
-git clone git://github.com/vsergeev/luaradio.git
+git clone https://github.com/vsergeev/luaradio.git
 cd luaradio/embed
 make
 sudo make install
