embed/examples: change clock_settime() to settimeofday() in rds-timesync
for "portability". OS X hasn't implemented the POSIX function
clock_settime(), because they're too busy working on the corner radius
of their bubbly menu bar.

--- a/docs/4.embedding_luaradio.md
+++ b/docs/4.embedding_luaradio.md
@@ -283,6 +283,7 @@ to an application.
 #include <stdint.h>
 #include <unistd.h>
 #include <time.h>
+#include <sys/time.h>
 
 #include <luaradio.h>
 
@@ -393,9 +394,9 @@ int main(int argc, char *argv[]) {
     printf("Setting system time to %s", ctime(&t));
 
     /* Set system time */
-    struct timespec ts = { .tv_sec = t, .tv_nsec = 0 };
-    if (clock_settime(CLOCK_REALTIME, &ts) < 0) {
-        perror("clock_settime()");
+    struct timeval tv = { .tv_sec = t, .tv_usec = 0 };
+    if (settimeofday(&tv, NULL) < 0) {
+        perror("settimeofday()");
         return -1;
     }
 
