docs: improve punctuation in getting started guide

--- a/docs/2.getting-started.md
+++ b/docs/2.getting-started.md
@@ -149,8 +149,8 @@ blocks inherit their sample rate through the connections in the flow graph.
 The last line of the blocks section instantiates a special kind of block,
 called the [`CompositeBlock`](0.reference-manual.md#compositeblock). A
 composite block is a composition of blocks, created for one of two purposes:
-either for a top-level block: a composition of blocks forming a complete flow
-graph that can be run, or for a hierarchical block: a composition of blocks
+either for a top-level block — a composition of blocks forming a complete flow
+graph that can be run, or for a hierarchical block — a composition of blocks
 abstracted into one block. In this example, we create a `CompositeBlock` to
 serve as a top-level block that contains a complete flow graph.
 
