--- a/docs/6.comparison-gnuradio.md
+++ b/docs/6.comparison-gnuradio.md
@@ -19,27 +19,29 @@ However, LuaRadio differs from GNU Radio in many respects:
 
 ## Purpose
 
-LuaRadio is more inclined towards scripting and prototyping than GNU Radio, and
-emphasizes fast block development.
+LuaRadio is inclined more towards scripting and prototyping than GNU Radio, and
+emphasizes fast, compilation-free block development.
 
 ## Footprint
 
-GNU Radio has a large size footprint. A binary GNU Radio installation weighs in
-at over 100 MB. When the installation includes development support, the
-[boost](http://www.boost.org/) development headers and numerous other libraries
-and tools (gsl, blas, swig, orc, etc.) can add another 100 MB or more.
+GNU Radio has a large size footprint. A typical binary GNU Radio installation
+weighs in at over 100 MB. When the installation includes development support,
+the [boost](http://www.boost.org/) development headers and numerous other
+libraries and tools (gsl, blas, swig, orc, etc.) can add another 100 MB or
+more.
 
-GNU Radio has a large compilation footprint, in terms of time and dependencies.
-GNU Radio framework and module compilation is generally slow. Compiled versions
-of GNU Radio modules and applications can also break in complex ways when the
-underlying GNU Radio or boost runtimes are updated. These modules and
-applications may require routine re-compilation — sometimes in a particular
-order — to be linked correctly with the updated libraries and each other.
+GNU Radio also has a large compilation footprint, in terms of time and
+dependencies. Compilation of the GNU Radio framework and its modules is
+generally slow. Compiled versions of GNU Radio modules and applications can
+also break in complex ways when the underlying GNU Radio or boost runtimes are
+updated. These modules and applications may require routine re-compilation —
+sometimes in a particular order — to be linked correctly with the updated
+libraries and each other.
 
 LuaRadio's total footprint is on the order of 1 MB and its blocks require no
 compilation.  LuaRadio has zero dependencies for non-real-time applications,
 and may otherwise use [liquid-dsp](https://github.com/jgaeddert/liquid-dsp) or
-[libvolk](http://libvolk.org/) for acceleration in real-time applications.
+[VOLK](http://libvolk.org/) for acceleration in real-time applications.
 [liquid-dsp](https://github.com/jgaeddert/liquid-dsp) shares LuaRadio's
 affinity for minimal dependencies and making software-defined radio more
 accessible to embedded Linux platforms.
@@ -53,17 +55,21 @@ LuaRadio is licensed MIT, a more permissive license.
 
 ## Extension
 
-GNU Radio blocks are written in C++ and have a lot of boilerplate for building,
-Python binding, and testing. Blocks sometimes use an esoteric form of string
-templating (e.g.
-[`add_XX_impl.cc.t`](https://github.com/gnuradio/gnuradio/blob/v3.7.9.2/gr-blocks/lib/add_XX_impl.cc.t#L53))
-to code generate support for multiple data types. For examples of typical GNU
-Radio blocks, see the GNU Radio [Out-of-tree Modules
-guide](http://gnuradio.org/redmine/projects/gnuradio/wiki/OutOfTreeModules),
+GNU Radio blocks are written in C++ and tend to have a lot of boilerplate for
+building, Python binding, and testing. See the GNU Radio [Out-of-tree Modules
+guide](http://gnuradio.org/redmine/projects/gnuradio/wiki/OutOfTreeModules) and
 [Blocks Coding
-Guide](http://gnuradio.org/redmine/projects/gnuradio/wiki/BlocksCodingGuide),
-or the source code of one of the third-party modules on
-[CGRAN](http://www.cgran.org/).
+Guide](http://gnuradio.org/redmine/projects/gnuradio/wiki/BlocksCodingGuide)
+for examples of the block development flow and blocks. Blocks require
+compilation before they can be used in a flow graph. Blocks sometimes use a
+custom form of string templating (e.g.
+[`add_XX_impl.cc.t`](https://github.com/gnuradio/gnuradio/blob/v3.7.9.2/gr-blocks/lib/add_XX_impl.cc.t#L53))
+despite being written in C++, to code generate support for multiple data types.
+Blocks are bound to Python using [SWIG](http://www.swig.org/), which generates
+usable, but also unnatural bindings. For examples of typical GNU Radio blocks,
+see the source code of one of the third-party modules on
+[CGRAN](http://www.cgran.org/). In a nutshell, GNU Radio block development is
+shrouded in boilerplate and esoterica.
 
 GNU Radio does not support creating custom first-class data types for
 serialization between blocks, but blocks may exchange Protocol Data Units
@@ -75,10 +81,8 @@ data out-of-band of flow graph streams.
 
 LuaRadio blocks are written in pure Lua, have substantially less boilerplate,
 and require no compilation or bindings. In LuaRadio, the convenience of
-scripting applies to both defining flow graphs and developing blocks.  Blocks
-can support multiple data types natively, e.g
-[`add.lua`](../radio/blocks/signal/add.lua), with LuaRadio's type signature
-system. For examples of typical LuaRadio blocks, see the [Creating
+scripting applies to both defining flow graphs and developing blocks. For
+examples of typical LuaRadio blocks, see the [Creating
 Blocks](3.creating-blocks.md) guide.
 
 LuaRadio supports creating custom first-class data types based on fixed-size C
@@ -97,15 +101,15 @@ Radio](https://github.com/gnuradio/gnuradio/tree/master/gr-blocks/lib),
 
 GNU Radio's I/O signature system is limited to matching sizes of types (e.g.
 `sizeof(gr_complex)`) in block connections, whereas LuaRadio's type signature
-system is more complete and flexible. Types in block connections are matched
+system is safer and more flexible. Types in block connections are matched
 explicitly in LuaRadio, and input types can also be specified by a function
 predicate.  For example, the [`JSONSink`](0.reference-manual.md#jsonsink) block
 can accept any data type that implements `to_json()`.
 
-GNU Radio blocks can each only support one type signature, which pushes the
+GNU Radio blocks can only support one type signature each, which pushes the
 problem of block type differentiation to the users. GNU Radio has developed a
 rich nomenclature for annotating their block names with their type signature,
-using suffixes like `_cc` and `_ff`, e.g. `multiply_cc`, `multiply_ff`,
+using obscure suffixes like `_cc` and `_ff`, e.g. `multiply_cc`, `multiply_ff`,
 `fir_filter_ccc`, `fir_filter_ccf`, `fir_filter_fff` — scroll through [GNU
 Radio Sphinx documentation](http://gnuradio.org/doc/sphinx/) for more examples.
 
