--- a/docs/0.reference-manual.md
+++ b/docs/0.reference-manual.md
@@ -1,6 +1,6 @@
 # LuaRadio Reference Manual
 
-Generated from LuaRadio `v0.1.0`.
+Generated from LuaRadio `v0.1.1`.
 
 ## Table of contents
 
@@ -542,8 +542,9 @@ the librtlsdr library.
 * `rate` (*number*): Sample rate in Hz
 * `options` (*table*): Additional options, specifying:
     * `autogain` (bool, default false)
-    * `rf_gain` (number, default 10.0 dB)
+    * `rf_gain` (number, default closest supported to 10.0 dB)
     * `freq_correction` PPM (number, default 0.0)
+    * `device_index` (integer, default 0)
 
 
 ###### Type Signatures
