docs: improve wording in embedding luaradio document

--- a/docs/4.embedding-luaradio.md
+++ b/docs/4.embedding-luaradio.md
@@ -105,7 +105,7 @@ In more advanced usage, applications may access the Lua state of the LuaRadio
 context with `luaradio_get_state()` . Applications can use this with the Lua C
 API to prepare a custom environment for scripts prior to loading them.
 
-Most API functions return 0 on success and a negative integer code on failure.
+Most API functions return 0 on success or a negative integer code on failure.
 `luaradio_new()` returns `NULL` on memory allocation failure.
 `luaradio_strerror()` can be used to get a human-readable error string of the
 last failure that occurred.
@@ -124,7 +124,7 @@ the application is sinking samples, or both.
 
 The application can then use standard file descriptor I/O calls `read()` or
 `write()` on its file descriptor to serialize samples from or to LuaRadio. The
-application must specify the C type of the samples, as the samples are read and
+application must know the C type of the samples, as the samples are read and
 written raw, in their native memory representation, with no marshalling.
 
 In the case of an application sinking samples of a variable-sized
