docs: rename heading in getting started guide

--- a/docs/2.getting-started.md
+++ b/docs/2.getting-started.md
@@ -188,7 +188,7 @@ by a user's `SIGINT` signal. In this case, the cosine signal generator sources
 will generate samples indefinitely, so this flow graph will only terminate by a
 user's `SIGINT` signal.
 
-## Types and Blocks
+## Blocks and Types
 
 Building flow graphs with LuaRadio is a matter of choosing the right blocks and
 connecting them.  The [LuaRadio Reference Manual](0.reference-manual.md)
