docs: remove stray paren from creating blocks guide

--- a/docs/3.creating-blocks.md
+++ b/docs/3.creating-blocks.md
@@ -818,7 +818,7 @@ pointers (despite their prototypes in the VOLK documentation).
 These definitions are almost identical to their library prototypes —
 [`volk_32fc_x2_multiply_32fc()`](http://libvolk.org/doxygen/volk_32fc_x2_multiply_32fc.html)
 and
-[`volk_32f_x2_multiply_32f()`](http://libvolk.org/doxygen/volk_32f_x2_multiply_32f.html))
+[`volk_32f_x2_multiply_32f()`](http://libvolk.org/doxygen/volk_32f_x2_multiply_32f.html)
 — with the exception of substituting the VOLK `lv_32fc_t` type for
 `complex_float32_t`, and the C `float` type for `float32_t`.
 
